--- a/Completed/trig1/trig.css
+++ b/Completed/trig1/trig.css
@@ -4,8 +4,20 @@ body{
 h1{
     text-align: center;
 }
-
 button{
     padding: 20px;
     font-size: 16pt;
 }
+#table, th, td {
+    border: 1px solid black;
+    text-align: center;
+    color:white;
+    margin: 0px;
+  }
+#table{
+    margin-left: auto;
+    margin-right: auto;
+}
+  th{
+      background-color: midnightblue;
+  }
