--- a/FinalProject copy/html/navbar.css
+++ b/FinalProject copy/html/navbar.css
@@ -105,6 +105,10 @@ p {
   margin-bottom: 1.25rem;
   color: var(--clr-grey-5);
 }
+.cart{
+  right: 10px;
+  left: auto;
+}
 @media screen and (min-width: 800px) {
   h1 {
     font-size: 4rem;
@@ -151,80 +155,103 @@ main {
   place-items: center;
 }
 
+/*
+=============== 
+Navbar
+===============
+*/
 nav {
-    background: var(--clr-white);
-    box-shadow: var(--light-shadow);
-  }
-  .nav-header {
+  background: #2b6777;
+  box-shadow: var(--light-shadow);
+}
+.nav-header {
+  display: flex;
+  align-items: center; 
+  /* justify-content: space-between; */
+  padding: 2rem;
+}
+.nav-toggle {
+  font-size: 1.5rem;
+  color: var(--clr-primary-5);
+  background: transparent;
+  border-color: transparent;
+  transition: var(--transition);
+  cursor: pointer;
+}
+.nav-toggle:hover {
+  color: var(--clr-primary-1);
+  transform: rotate(90deg);
+}
+.logo {
+  height: 60px;
+}
+.links a {
+  color: white;
+  font-size: 1rem;
+  text-transform: capitalize;
+  letter-spacing: var(--spacing);
+  display: block;
+  padding: 2rem 2rem;
+  transition: var(--transition);
+}
+.links a:hover {
+  background: var(--clr-primary-8);
+  color: var(--clr-primary-5);
+  padding-left: 1.5rem;
+}
+.social-icons {
+  display: none;
+}
+.links {
+   height: 0;
+  overflow: hidden;
+  transition: white;
+
+}
+.show-links {
+  height: 10rem;
+}
+.cart{
+  right: 10px;
+  left: auto;
+}
+
+@media screen and (min-width: 800px) {
+  .nav-center {
+    max-width: 1170px;
+    margin: 0 auto;
     display: flex;
     align-items: center;
     justify-content: space-between;
     padding: 1rem;
   }
-.nav-toggle {
-    font-size: 1.5rem;
-    color: var(--clr-primary-5);
-    background: transparent;
-    border-color: transparent;
-    transition: var(--transition);
-    cursor: pointer;
+  .nav-header {
+    padding: 0;
   }
-.nav-toggle:hover {
-    color: var(--clr-primary-1);
-    transform: rotate(90deg);
-  }
-.logo {
-    height: 40px;
-  }
-.links a {
-    color: var(--clr-grey-3);
-    font-size: 1rem;
-    text-transform: capitalize;
-    letter-spacing: var(--spacing);
-    display: block;
-    padding: 0.5rem 1rem;
-    transition: var(--transition);
-  }
-.links a:hover {
-    background: var(--clr-primary-8);
-    color: var(--clr-primary-5);
-    padding-left: 1.5rem;
-  }
-.social-icons {
+  .nav-toggle {
     display: none;
   }
-.links {
-     height: 0;
-    overflow: hidden;
-    transition: var(--transition); 
+  .links {
+    height: auto;
+    display: flex;
   }
-.show-links {
-    height: 10rem;
+  .links a {
+    padding: 0;
+    margin: 0 0.5rem;
   }
-  @media screen and (min-width: 800px) {
-.nav-center {
-      max-width: 1170px;
-      margin: 0 auto;
-      display: flex;
-      align-items: center;
-      justify-content: space-between;
-      padding: 1rem;
-    }
-.nav-header {
-      padding: 0;
-    }
-.nav-toggle {
-      display: none;
-    }
-.links {
-      height: auto;
-      display: flex;
-    }
-.links a {
-      padding: 0;
-      margin: 0 0.5rem;
-    }
-.links a:hover {
-      padding: 0;
-      background: transparent;
-    }}
+  .links a:hover {
+    padding: 0;
+    background: transparent;
+  }
+  .social-icons {
+    display: flex;
+  }
+  .social-icons a {
+    margin: 0 0.5rem;
+    color: var(--clr-primary-5);
+    transition: var(--transition);
+  }
+  .social-icons a:hover {
+    color: var(--clr-primary-7);
+  }
+}
